--- a/cake-planner-frontend/projects/admin-panel/src/assets/i18n/en.json
+++ b/cake-planner-frontend/projects/admin-panel/src/assets/i18n/en.json
@@ -1,10 +1,14 @@
 {
+  "APP": { "TITLE": "Cake Planner" },
+  "MORNING": "Good Morning",
+  "AFTERNOON": "Good Afternoon",
+  "EVENING": "Good Evening",
   "ADMIN": {
     "TITLE": "User Administration",
     "HEADER_FOR": "for",
     "TABLE": {
       "NAME": "Name",
-      "EMAIL": "Email",
+      "EMAIL": "E-Mail",
       "GROUP": "Group",
       "ROLE": "Group Role",
       "IS_ADMIN": "Global Admin",
@@ -18,27 +22,46 @@
     },
     "LOGIN": {
       "TITLE": "Admin Panel Login",
-      "EMAIL": "Email",
+      "EMAIL": "E-Mail",
       "PASSWORD": "Password",
-      "BTN_LOGIN": "Log in",
+      "BTN_LOGIN": "Login",
       "BTN_CONFIRM": "Confirm",
       "BTN_CANCEL": "Cancel",
       "MSG_2FA": "Please enter 2FA code:",
       "LABEL_CODE": "Code (6 digits)",
-      "ERR_LOGIN_FAILED": "Login failed. Please check credentials.",
+      "ERR_LOGIN_FAILED": "Login failed. Please check data.",
       "ERR_WRONG_CODE": "Wrong code or expired.",
-      "ERR_ACCESS_DENIED": "Access denied: Insufficient permissions"
+      "ERR_ACCESS_DENIED": "Access denied: No admin rights"
     },
     "MSGS": {
-      "ROLE_UPDATED": "Role updated successfully",
+      "PWD_FORCE_ON": "Password forced",
+      "PWD_FORCE_OFF": "Password force removed",
+      "GROUP_CREATED": "Group created",
+      "GROUP_DELETED": "Group deleted",
+      "GROUP_DELETE_ERR": "Delete not possible (Group may be not empty)",
+      "ROLE_UPDATED": "Role successfully updated",
       "ERROR": "An error occurred",
       "STATUS_UPDATED": "Status for {{name}} updated.",
-      "STATUS_ERROR": "Error: Could not save status!",
-      "PWD_FORCE_ON": "Password change forced for {{name}}.",
-      "PWD_FORCE_OFF": "Password force removed for {{name}}.",
-      "SAVE_ERROR": "Error while saving!",
+      "STATUS_ERROR": "Error: Status could not be saved!",
+      "SAVE_ERROR": "Error saving!",
       "GROUP_ASSIGNED": "Group assigned",
-      "GROUP_ERROR": "Error assigning group"
+      "GROUP_ERROR": "Error assigning group",
+      "GROUPS": {
+        "CONFIRM_DELETE": "Do you really want to delete the group {{name}}?",
+        "DELETE_SUCCESS": "Group {{name}} deleted",
+        "DELETE_ERROR": "Error deleting"
+      }
+    },
+    "GROUPS": {
+      "TITLE": "Group Management",
+      "LABEL_NAME": "Group Name",
+      "BTN_ADD": "Add",
+      "NEW_GROUP": "New Group",
+      "TABLE": {
+        "NAME": "Name",
+        "ID": "ID",
+        "ACTIONS": "Actions"
+      }
     }
   }
 }
