adding legal and privacy protection

--- a/cake-planner-frontend/projects/admin-panel/src/assets/i18n/de.json
+++ b/cake-planner-frontend/projects/admin-panel/src/assets/i18n/de.json
@@ -16,6 +16,7 @@
       "ACTIONS": "Aktionen",
       "NONE": "Keine"
     },
+
     "ROLES": {
       "MEMBER": "Mitglied",
       "ADMIN": "Gruppen-Admin"
@@ -63,5 +64,9 @@
         "ACTIONS": "Aktionen"
       }
     }
+  },
+  "MENU": {
+    "IMPRINT": "Impressum",
+    "DATA_PROTECTION": "Datenschutz"
   }
 }
