--- a/cake-planner-frontend/projects/admin-panel/src/assets/i18n/en.json
+++ b/cake-planner-frontend/projects/admin-panel/src/assets/i18n/en.json
@@ -16,6 +16,7 @@
       "ACTIONS": "Actions",
       "NONE": "None"
     },
+
     "ROLES": {
       "MEMBER": "Member",
       "ADMIN": "Group Admin"
@@ -63,5 +64,9 @@
         "ACTIONS": "Actions"
       }
     }
+  },
+  "MENU": {
+    "IMPRINT": "Legal Notice",
+    "DATA_PROTECTION": "Privacy Policy"
   }
 }
