--- a/projects/user-app/public/assets/i18n/dashboard/en.json
+++ b/projects/user-app/public/assets/i18n/dashboard/en.json
@@ -13,5 +13,8 @@
     "SEC_DESC_OK": "Your account is secured with 2-Factor Authentication.",
     "BTN_SETUP": "Setup 2FA",
     "QUICK_ACTIONS": "Quick Actions"
+  },
+  "EVENT": {
+    "CREATE_TITLE": "Add New Cake"
   }
 }
