--- a/projects/user-app/public/assets/i18n/de.json
+++ b/projects/user-app/public/assets/i18n/de.json
@@ -12,7 +12,9 @@
     "IMPRINT": "Impressum",
     "DATA_PROTECTION": "Datenschutz",
     "CHANGE_LANGUAGE": "Sprache wechseln",
-    "LOGOUT": "abmelden"
+    "LOGOUT": "abmelden",
+    "TOGGLE_THEME": "Theme wechseln",
+    "INSTALL_APP": "App installieren"
   },
   "DASHBOARD": {
     "MORNING": "Guten Morgen",
