feat: extend Hall of Fame

--- a/projects/user-app/public/assets/i18n/hall_of_fame/de.json
+++ b/projects/user-app/public/assets/i18n/hall_of_fame/de.json
@@ -1,4 +1,7 @@
 {
   "HALL_OF_FAME": "Ruhmeshalle",
-  "PROVIDED_BY": "Bereitgestellt von"
+  "PROVIDED_BY": "Bereitgestellt von",
+  "TOP_BAKERS": "Top Bäcker",
+  "CAKES": "Kuchen",
+  "TOP_EVENTS": "Top Events"
 }
