--- a/projects/user-app/public/assets/i18n/hall_of_fame/en.json
+++ b/projects/user-app/public/assets/i18n/hall_of_fame/en.json
@@ -1,4 +1,7 @@
 {
   "HALL_OF_FAME": "Hall of Fame",
-  "PROVIDED_BY": "Provided by"
+  "PROVIDED_BY": "Provided by",
+  "TOP_BAKERS": "Top Bakers",
+  "CAKES": "Cakes",
+  "TOP_EVENTS": "Top Events"
 }
